# salesapp

./: .gitignore  home.py  pyproject.toml
pages/: 01_Visão Geral.py  02_Visualização_Dinâmica.py  03_Tabela.py  04_Adição_e_Remoção_de_Vendas.py
tests/: teste copy.py
utilidades/: teste.py  utilidades.py
